Bug 1434538 - Don't lock while rescaling or copying video frame buffers. r=jib a=RyanVM

MozReview-Commit-ID: 78bXkY8kBfV

--HG--
extra : rebase_source : cc7002d074d920a10810c5f34e712dad7258cb93
extra : histedit_source : 8224cd9723664941ba1f68672d2cd0e43f035914